4-ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: nginx-service
            port:
              number: 80
